tests/neg/Abs.hs
abz :: Int -> Int
abz = (\ n -> n < 0)


